@@ -1,13 +1,12 @@
 package blaybus.domain.map.application.service.impl;
 
 import blaybus.domain.map.application.service.PositionDistanceCalculateService;
-import blaybus.domain.map.domain.entity.Position;
 import blaybus.domain.map.domain.repository.PositionRepository;
+import blaybus.domain.map.presentation.dto.response.PositionResponseDTO;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -16,8 +15,8 @@ public class PositionDistanceCalculateServiceImpl implements PositionDistanceCal
     private final PositionRepository positionRepository;
 
     @Override
-    public List<String> orderPositionByDistance(double lat, double lng) {
-        List<Position> distances = positionRepository.findAllOrderByDistance(lat, lng);
-        return distances.stream().map(Position::getName).collect(Collectors.toList());
+    public List<PositionResponseDTO> orderPositionByDistance(double lat, double lng) {
+        return positionRepository.findAllOrderByDistance(lat, lng).stream()
+                .map(row -> new PositionResponseDTO((String) row[0], (Double) row[1])).toList();
     }
 }
